--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="overlay" id="loginOverlay">
             <div class="popup-container">
                 <div class="popup-image">
-                    <img src="https://img.freepik.com/free-vector/congratulations-card-template-with-man-graduation-gown_1308-3010.jpg" alt="Login Image">
+                    <img src="https://img.freepik.com/free-vector/illustration-university-graduates_53876-28468.jpg?t=st=1743620155~exp=1743623755~hmac=e0de1a93424ebe26ca79fdc837c2644e51a9d734f0213a7d84e924fe1c2dac34&w=1380" alt="Login Image">
                 </div>
                 <div class="popup">
                     <h2>Login</h2>
@@ -83,7 +83,7 @@
     <div class="overlay" id="registerOverlay">
     <div class="popup-container">
         <div class="popup-image">
-            <img src="https://img.freepik.com/free-vector/congratulations-card-template-with-man-graduation-gown_1308-3010.jpg?t=st=1743174913~exp=1743178513~hmac=aabc093b17aa8273c7a0b4e2b3c3c83ee23e4f06aa4cc386265b2167381a4c5c&w=900" alt="Register Image">
+            <img src="https://img.freepik.com/free-vector/illustration-university-graduates_53876-28468.jpg?t=st=1743620155~exp=1743623755~hmac=e0de1a93424ebe26ca79fdc837c2644e51a9d734f0213a7d84e924fe1c2dac34&w=1380" alt="Register Image">
         </div>
         <div class="popup">
             <h2>Register</h2>
